# Telegram-Bot-Install

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
telegram_notifications/: __init__.py  send_bot_message.py
