[project]
name = "telegram-bot"
version = "2.1.0"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "python-telegram-bot==22.5",
]

[dependency-groups]
dev = [
  "mypy>=1.10.0,<2",
  "pre-commit>=4.2.0",
]

[build-system]
requires = [
  "uv_build>=0.8.2,<0.9.0",
]
build-backend = "uv_build"

[tool.uv]
package = false
default-groups = [
  "dev",
]

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
exclude = [
  "tests",
]

[tool.ruff.lint]
select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "D213", # multiline docstring starts on the second line
  "E",    # pycodestyle errors
  "EM",   # flake8-errmsg
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "N",    # pep8-naming
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PYI",  # flake8-pyi
  "Q",    # flake8-quotes
  "RUF",  # ruff
  "S",    # bandit
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "TD",   # flake8-todos
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
  "PTH",  # flake8-use-pathlib
  "PERF", # perflint
]

ignore = [
  # flake8-annotations
  "ANN003", # missing kwargs type annotation
  "ANN401", # allow the use of 'Any' type annotation

  # flake8-bugbear
  "B009", # getting constant attribute value using 'getattr'
  "B010", # setting constant attribute value using 'setattr'
  "B019", # use of 'functools.lru_cache' and 'functools.cache'
  "B023", # checking for function definitions that use a loop variable

  # pydocstyle
  "D105", # missing docstring in dunder methods
  "D107", # allow docstrings beneath the 'class' keyword
  "D203", # one blank line before class docstring
  "D205", # blank line after summary
  "D212", # multiline docstring starts on the first line
  "D415", # first line should end in punctuation

  # pycodestyle
  "E731", # allow assigning lambdas to variables

  # flake8-errmsg
  "EM101", # using string literals in error messages

  # flake8-implicit-str-concat
  "ISC001", # concatenating strings may make lines too long

  # pylint
  "PLR0904", # allow an arbitrary number of methods in classes
  "PLR091",  # upper bounds on number of variables, statements, etc.
  "PLR2004", # allow for constants in comparisons instead of just variables

  # flake8-simplify
  "SIM108", # no use of ternary operator instead of if-else blocks

  # flake8-todos
  "TD003", # missing issue link

  # tryceratops
  "TRY003", # long messages outside exception class

  # pyupgrade
  "UP015", # redundant mode of the 'open' function
]
fixable = ["ALL"]

[tool.ruff.lint.pep8-naming]
ignore-names = [] # add names you would like to exclude from the convention

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
